fix(Tasks): remove botton white space

--- a/src/components/Tasks/Tasks.styl
+++ b/src/components/Tasks/Tasks.styl
@@ -1,6 +1,5 @@
 .tasks
   width 100%
-  height 100%
 
 .task
   display flex
